# weekly-schedule

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: tests.py  views.py
app/database/: models.py  serializers.py
app/migrations/: 0001_initial.py  0002_alter_weeklyschedule_friday_and_more.py
schedule/: settings.py  urls.py
